--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -65,6 +65,7 @@ jobs:
         
             - name: list files
               run: ls -l
+              working-directory: server
 
             - name: Restore dependencies
               run: dotnet restore ./server/devblog.csproj
