--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -58,15 +58,12 @@ jobs:
         runs-on: ubuntu-latest
         environment: staging
         steps:
-            - name: Set up .NET
-              uses: actions/setup-dotnet@v1
+            - uses: actions/checkout@v4
+            - name: Setup .NET
+              uses: actions/setup-dotnet@v4
               with:
-                dotnet-version: '8.0.x'
+                dotnet-version: 8.0.x
         
-            - name: list files
-              run: ls -l
-              working-directory: server
-
             - name: Restore dependencies
               run: dotnet restore ./server/devblog.csproj
         
