--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -38,10 +38,11 @@ jobs:
               run: trunk build --release  
               working-directory: client
 
-            - uses: actions/upload-artifact@master
+            - name: Upload Build
+              uses: actions/upload-artifact@v4
               with:
-                name: clientBuild
-                path: clientBuild
+                name: clientArtifact
+                path: client
 
     build-server:
         name: Build Server
@@ -63,9 +64,10 @@ jobs:
           - name: Publish application
             run: dotnet publish ./server/devblog.csproj -c Release -o ./app/publish /p:UseAppHost=false
 
-          - uses: actions/upload-artifact@master
+          - name: Upload Build
+            uses: actions/upload-artifact@v4
             with:
-              name: serverBuild
+              name: serverArtifact
               path: ./app/publish
 
     copy-files:
@@ -84,21 +86,27 @@ jobs:
           - name: Add Host Key to known_hosts
             run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ${{ secrets.SSH_PRIVATE_KEY_PATH }}/known_hosts
 
-          - uses: actions/download-artifact@master
+          - name: Download the Client Artifact
+            uses: actions/download-artifact@v4
             with:
-              name: clientBuild
-              path: clientBuild
+              name: clientArtifact
+              path: .
 
-          - uses: actions/download-artifact@master
+          - name: Download the Server Artifact
+            uses: actions/download-artifact@v4
             with:
-              name: serverBuild
-              path: app/publish
+              name: serverArtifact
+              path: .
+
+          - name: List Artifacts
+            run: ls -l
 
           - name: Copy Files to Server
             run: |
+              scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} docker-compose.yml ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_ROOT_PATH }}
               scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} -r clientBuild/client/dist ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_ROOT_PATH }}/client
               scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} clientBuild/client/Dockerfile ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_ROOT_PATH }}/client
-              scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} app/publish/Dockerfile ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_ROOT_PATH }}/server
+              scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} server/Dockerfile ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_ROOT_PATH }}/server
               scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} -r app/publish ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_ROOT_PATH }}/server
 
 
