--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -70,27 +70,21 @@ jobs:
               name: serverArtifact
               path: .
 
-          # - name: Upload Docker Compose File
-          #   uses: actions/upload-artifact@v4
-          #   with:
-          #     name: dockerCompose
-          #     path: docker-compose.yml
-
     copy-files:
         name: Copy Files
         needs: [build-server, build-client]
         runs-on: ubuntu-latest
         environment: staging
         steps:
-          - name: Create SSH Key
-            run: |
-              mkdir -p ${{ secrets.SSH_PRIVATE_KEY_PATH }}
-              echo "${{ secrets.SSH_PRIVATE_KEY_CONTENT }}" > ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }}
-              sudo chmod 600 ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }}
-            shell: bash
+          # - name: Create SSH Key
+          #   run: |
+          #     mkdir -p ${{ secrets.SSH_PRIVATE_KEY_PATH }}
+          #     echo "${{ secrets.SSH_PRIVATE_KEY_CONTENT }}" > ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }}
+          #     sudo chmod 600 ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }}
+          #   shell: bash
 
-          - name: Add Host Key to known_hosts
-            run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ${{ secrets.SSH_PRIVATE_KEY_PATH }}/known_hosts
+          # - name: Add Host Key to known_hosts
+          #   run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ${{ secrets.SSH_PRIVATE_KEY_PATH }}/known_hosts
 
           - name: Download Client Artifacts
             uses: actions/download-artifact@v4
@@ -104,28 +98,21 @@ jobs:
               name: serverArtifact
               path: server
 
-          # - name: Download Docker Compose File
-          #   uses: actions/download-artifact@v4
-          #   with:
-          #     name: dockerCompose
-          #     path: docker-compose.yml
-
-          - name: List folders
-            run: ls -l
-
-          - name: List Client Files
-            run: ls -l
-            working-directory: client
-
-          - name: List Server Files
-            run: ls -l
-            working-directory: server
-
-          - name: List Server/Server Files
-            run: ls -l
-            working-directory: server/server
+          # - name: Copy Files to Server
+          #   run: |
+          #     scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} server/docker-compose.yml ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_ROOT_PATH }}
+          #     scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} -r client/dist ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_ROOT_PATH }}/client
+          #     scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} client/Dockerfile ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_ROOT_PATH }}/client
+          #     scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} server/server/Dockerfile ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_ROOT_PATH }}/server
+          #     scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} -r server/app/publish ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_ROOT_PATH }}/server
 
           - name: Copy Files to Server
+            uses: actions/checkout@v2
+          - name: Setup SSH
+            uses: webfactory/ssh-agent@v0.5.3
+            with:
+              ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY_CONTENT }}
+          - name: Copy Artifacts to Server
             run: |
               scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} server/docker-compose.yml ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_ROOT_PATH }}
               scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} -r client/dist ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_ROOT_PATH }}/client
